test_regress/t/t_interface_paren_missing_bad.out
%Error: t/t_interface_paren_missing_bad.v:13:4: Interface 'intf' not connected as parent's interface not connected
                                              : ... Perhaps caused by another error on the parent interface that needs resolving
                                              : ... Or, perhaps intended an interface instantiation but are missing parenthesis (IEEE 1800-2023 25.3)?
   13 |    intf intf_i;
      |    ^~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
